hphp/test/zend/bad/ext-standard-file/file_variation4.php.expectf
*** Testing file() : usage variation ***

--int 0--
Error: 2 - file() expects parameter 3 to be resource, integer given, %s(%d)
NULL

--int 1--
Error: 2 - file() expects parameter 3 to be resource, integer given, %s(%d)
NULL

--int 12345--
Error: 2 - file() expects parameter 3 to be resource, integer given, %s(%d)
NULL

--int -12345--
Error: 2 - file() expects parameter 3 to be resource, integer given, %s(%d)
NULL

--float 10.5--
Error: 2 - file() expects parameter 3 to be resource, double given, %s(%d)
NULL

--float -10.5--
Error: 2 - file() expects parameter 3 to be resource, double given, %s(%d)
NULL

--float 12.3456789000e10--
Error: 2 - file() expects parameter 3 to be resource, double given, %s(%d)
NULL

--float -12.3456789000e10--
Error: 2 - file() expects parameter 3 to be resource, double given, %s(%d)
NULL

--float .5--
Error: 2 - file() expects parameter 3 to be resource, double given, %s(%d)
NULL

--empty array--
Error: 2 - file() expects parameter 3 to be resource, array given, %s(%d)
NULL

--int indexed array--
Error: 2 - file() expects parameter 3 to be resource, array given, %s(%d)
NULL

--associative array--
Error: 2 - file() expects parameter 3 to be resource, array given, %s(%d)
NULL

--nested arrays--
Error: 2 - file() expects parameter 3 to be resource, array given, %s(%d)
NULL

--uppercase NULL--
array(3) {
  [0]=>
  string(7) "Line 1
"
  [1]=>
  string(7) "Line 2
"
  [2]=>
  string(6) "Line 3"
}

--lowercase null--
array(3) {
  [0]=>
  string(7) "Line 1
"
  [1]=>
  string(7) "Line 2
"
  [2]=>
  string(6) "Line 3"
}

--lowercase true--
Error: 2 - file() expects parameter 3 to be resource, boolean given, %s(%d)
NULL

--lowercase false--
Error: 2 - file() expects parameter 3 to be resource, boolean given, %s(%d)
NULL

--uppercase TRUE--
Error: 2 - file() expects parameter 3 to be resource, boolean given, %s(%d)
NULL

--uppercase FALSE--
Error: 2 - file() expects parameter 3 to be resource, boolean given, %s(%d)
NULL

--empty string DQ--
Error: 2 - file() expects parameter 3 to be resource, string given, %s(%d)
NULL

--empty string SQ--
Error: 2 - file() expects parameter 3 to be resource, string given, %s(%d)
NULL

--string DQ--
Error: 2 - file() expects parameter 3 to be resource, string given, %s(%d)
NULL

--string SQ--
Error: 2 - file() expects parameter 3 to be resource, string given, %s(%d)
NULL

--mixed case string--
Error: 2 - file() expects parameter 3 to be resource, string given, %s(%d)
NULL

--heredoc--
Error: 2 - file() expects parameter 3 to be resource, string given, %s(%d)
NULL

--instance of classWithToString--
Error: 2 - file() expects parameter 3 to be resource, object given, %s(%d)
NULL

--instance of classWithoutToString--
Error: 2 - file() expects parameter 3 to be resource, object given, %s(%d)
NULL

--undefined var--
array(3) {
  [0]=>
  string(7) "Line 1
"
  [1]=>
  string(7) "Line 2
"
  [2]=>
  string(6) "Line 3"
}

--unset var--
array(3) {
  [0]=>
  string(7) "Line 1
"
  [1]=>
  string(7) "Line 2
"
  [2]=>
  string(6) "Line 3"
}

--file stream resource--
Error: 2 - file(): supplied resource is not a valid Stream-Context resource, %s(%d)
array(3) {
  [0]=>
  string(7) "Line 1
"
  [1]=>
  string(7) "Line 2
"
  [2]=>
  string(6) "Line 3"
}
===DONE===